[package]
name = "unity_ls"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
fxhash = "0.2.1"
lsp-server = "0.7.9"
lsp-types = "0.97"
regex = "1.12.3"
saphyr = "0.0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = { version = "2.5.8", features = ["std"] }
walkdir = "2.5.0"
